# algotrade

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  comparePrices.py  requirements.txt
src/: CMakeLists.txt  Exchange.cpp  Exchange.h
